// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button snapshots Button: 0 1`] = `
<button
  className="button-0-1-8"
  data-sketch-symbol="Button - secondary"
  href={null}
>
  Secondary button
</button>
`;

exports[`button snapshots Button: 1 1`] = `
<button
  className="button-0-1-22 button__primary-0-1-23"
  data-sketch-symbol="Button - primary"
  href={null}
>
  Primary button
</button>
`;

exports[`button snapshots Button: 2 1`] = `
<button
  className="button-0-1-36 button__outline-0-1-38"
  data-sketch-symbol="Button - outline"
  href={null}
>
  Outline button
</button>
`;

exports[`button snapshots Button: 3 1`] = `
<button
  className="button-0-1-50 button__lightweight-0-1-53"
  data-sketch-symbol="Button - lightweight"
  href={null}
>
  <span
    className="button_contentRegion-0-1-55"
  >
    Lightweight button
  </span>
</button>
`;

exports[`button snapshots Button: 4 1`] = `
<button
  className="button-0-1-64 button__justified-0-1-68"
  href={null}
>
  <span
    className="button_contentRegion-0-1-69"
  >
    Justified button
  </span>
</button>
`;

exports[`button snapshots Button: 5 1`] = `
<a
  className="button-0-1-78"
  href="#"
>
  Anchor
</a>
`;

exports[`button snapshots Button: 6 1`] = `
<button
  className="button-0-1-92 button__disabled-0-1-98"
  data-sketch-symbol="Button - secondary disabled"
  disabled={true}
  href={null}
>
  Secondary button (disabled)
</button>
`;

exports[`button snapshots Button: 7 1`] = `
<button
  className="button-0-1-106 button__disabled-0-1-112 button__primary-0-1-107"
  data-sketch-symbol="Button - primary disabled"
  disabled={true}
  href={null}
>
  Primary button (disabled)
</button>
`;

exports[`button snapshots Button: 8 1`] = `
<button
  className="button-0-1-120 button__disabled-0-1-126 button__outline-0-1-122"
  data-sketch-symbol="Button - outline disabled"
  disabled={true}
  href={null}
>
  Outline button (disabled)
</button>
`;

exports[`button snapshots Button: 9 1`] = `
<button
  className="button-0-1-134 button__disabled-0-1-140 button__lightweight-0-1-137"
  data-sketch-symbol="Button - lightweight disabled"
  disabled={true}
  href={null}
>
  <span
    className="button_contentRegion-0-1-139"
  >
    Lightweight button (disabled)
  </span>
</button>
`;

exports[`button snapshots Button: 10 1`] = `
<button
  className="button-0-1-148 button__disabled-0-1-154 button__justified-0-1-152"
  disabled={true}
  href={null}
>
  <span
    className="button_contentRegion-0-1-153"
  >
    Justified button (disabled)
  </span>
</button>
`;

exports[`button snapshots Button: 11 1`] = `
<a
  aria-disabled={true}
  className="button-0-1-162 button__disabled-0-1-168"
  href="#"
>
  Anchor (disabled)
</a>
`;
